--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -2,7 +2,7 @@ name: Execute Python Script
 
 on:
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: '0 4,16 * * *'
 
 jobs:
   execute-python-script:
